# lisp-in-haskell

./: LICENSE  Scheme.hs  Scheme2.hs  Scheme3.hs  Scheme4.hs  Solutions.hs  prog.scm  scheme-workshop.cabal
src/: Scheme.hs  scheme.hs  stdlib.scm
src/Language/WorkshopScheme/: AST.hs  Interpreter.hs  Parser.hs  Primitives.hs
