name:                scheme-workshop
version:             0.1.0.0
synopsis:            Write Yourself a Scheme Workshop for Munich Lambda on Jul 5, 2014
-- description:
license:             BSD3
license-file:        LICENSE
author:              Munich Lambda
maintainer:          paul.koerbitz@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable scheme-workshop
  main-is:             Scheme.hs
  other-modules:       Language.WorkshopScheme.AST,
                       Language.WorkshopScheme.Parser,
                       Language.WorkshopScheme.Interpreter
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       parsec >= 2 && <3,
                       transformers >= 0.4,
                       mtl >= 2.2

  hs-source-dirs:      src
  default-language:    Haskell2010